[gd_scene load_steps=3 format=3 uid="uid://c2gvyh0qsi420"]

[ext_resource type="Script" uid="uid://duiqdulni7qie" path="res://menus/game_end_screen/summary_screen.gd" id="1_4e6qi"]

[sub_resource type="LabelSettings" id="LabelSettings_4e6qi"]
font_size = 64

[node name="SummarySceen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4e6qi")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.117
anchor_top = 0.117
anchor_right = 0.883
anchor_bottom = 0.883
offset_left = 0.215988
offset_top = 0.183998
offset_right = -0.216003
offset_bottom = -0.184021
grow_horizontal = 2
grow_vertical = 2

[node name="SurvivorWin" type="Label" parent="Panel"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.212
offset_bottom = -0.152008
grow_horizontal = 2
text = "Survivors win!"
label_settings = SubResource("LabelSettings_4e6qi")
horizontal_alignment = 1
vertical_alignment = 1

[node name="KillerWin" type="Label" parent="Panel"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.212
offset_bottom = -0.152008
grow_horizontal = 2
text = "Killers win!"
label_settings = SubResource("LabelSettings_4e6qi")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Buttons" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.246
anchor_top = 0.823
anchor_right = 0.754
anchor_bottom = 0.927
offset_left = 0.0279999
offset_top = -0.208008
offset_right = -0.0280151
offset_bottom = 0.207977
grow_horizontal = 2
grow_vertical = 0
alignment = 1
metadata/_edit_group_ = true

[node name="PlayAgain" type="Button" parent="Panel/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Play Again"

[node name="Quit" type="Button" parent="Panel/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Disconnect"

[connection signal="pressed" from="Panel/Buttons/PlayAgain" to="." method="_on_play_again_pressed"]
[connection signal="pressed" from="Panel/Buttons/Quit" to="." method="_on_quit_pressed"]
